Feature/new features (#9)
Add character table and fixes